[package]
name = "gluon-bug"
version = "0.1.0"
authors = ["Aashish Welling <aashishwelling@gmail.com>"]
edition = "2018"

[dependencies]
gluon = { git = "https://github.com/gluon-lang/gluon", features = ["serialization"] }
rmp-serde = { git = "https://github.com/omegablitz/msgpack-rust" }
serde_json = "1.0"
serde_state = "0.4.7"
